--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install dependencies
         run: npm install  # Modified 
       - name: Build Next.js site
-        run: npm build  # Modify 
+        run:  npm run build  # Modify 
 
   deploy:
     environment:
