--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -1,43 +1,42 @@
-name: Deploy nextjs-blog.js Site
+# Sample workflow for building and deploying a Next.js site to Vercel
+#
+# To get started with Next.js see: https://nextjs.org/docs/getting-started
+#
+name: Deploy Next.js site to Vercel
 
 on:
+  # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
+
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
+# Jobs
 jobs:
+  # Build job
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v2
         with:
-          node-version: "18"  # modified
+          node-version: "16"
       - name: Install dependencies
-        run: npm install  # Modified 
-      - name: Build Next.js site
-        run:  npm run build  # Modify 
+        run: npm install  # Replace with the appropriate command for your project
+      - name: Build with Next.js
+        run: npm build  # Replace with the appropriate command for your project
 
+  # Deployment job
   deploy:
-    environment:
-      name: github-pages
+    environment: 
+      name: production
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@4.1.0
+      - name: Deploy to Vercel
+        uses: amondnet/vercel-action@v20
         with:
-          branch: gh-pages  # The "gh-pages" branch is a common convention for deploying static sites on GitHub Pages
-          folder: ../.next  # By default, Next.js uses the ./out directory for the exported static files.
-          token: ${{ secrets.GITHUB_TOKEN }}
+          vercel-token: ${{ secrets.VERCEL_TOKEN }}
