--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -31,12 +31,13 @@ jobs:
 
   # Deployment job
   deploy:
-    environment: 
-      name: production
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to Vercel
-        uses: amondnet/vercel-action@v20
-        with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
+  environment:
+    name: production
+  runs-on: ubuntu-latest
+  needs: build
+  steps:
+    - name: Install Vercel CLI
+      run: npm install -g vercel
+    - name: Deploy to Vercel
+      run: vercel --token ${{ secrets.VERCEL_TOKEN }}
+
