--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -27,17 +27,16 @@ jobs:
       - name: Install dependencies
         run: npm install  # Replace with the appropriate command for your project
       - name: Build with Next.js
-        run: npm build  # Replace with the appropriate command for your project
+        run: npm run build  # Replace with the appropriate command for your project
 
   # Deployment job
   deploy:
-  environment:
-    name: production
-  runs-on: ubuntu-latest
-  needs: build
-  steps:
-    - name: Install Vercel CLI
-      run: npm install -g vercel
-    - name: Deploy to Vercel
-      run: vercel --token ${{ secrets.VERCEL_TOKEN }}
-
+    environment: 
+      name: production
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Install Vercel CLI
+        run: npm install -g vercel
+      - name: Deploy to Vercel
+        run: vercel --token ${{ secrets.VERCEL_TOKEN }}
