--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install dependencies
         run: npm install  # Replace with the appropriate command for your project
       - name: Build with Next.js
-        run: npm run build  # Replace with the appropriate command for your project
+        run: npm build  # Replace with the appropriate command for your project
 
   # Deployment job
   deploy:
@@ -36,7 +36,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Install Vercel CLI
-        run: npm install -g vercel
       - name: Deploy to Vercel
-        run: vercel --token ${{ secrets.VERCEL_TOKEN }}
+        uses: amondnet/vercel-action@v20
+        with:
+          vercel-token: ${{ secrets.VERCEL_TOKEN }}
